--- a/Argentina Programa/index.html
+++ b/Argentina Programa/index.html
@@ -3,43 +3,20 @@
 
 <head>
     <meta charset="utf-8">
+    <title>ProyectoIntegradorArgentinaPrograma</title>
     <meta http-equiv="x-ua-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>titulo</title>
-    <link rel="icon" href="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 
 
 </head>
 
 <body>
-
-
-
+    <app-root></app-root>
 </body>
 
 <footer>
-
-
-
-    
 </footer>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- </html>
+</html>
